Fix bug where extra long words would overflow their containers

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -362,3 +362,7 @@
   left: -460px;
   top: 100px;
 }
+
+p {
+  word-break: break-word;
+}
